# nhd

./: .gitignore  MANIFEST.ini  README.md  cockpit_block.html  cockpit_inject.py  pyproject.toml  requirements.txt
nhd/: app.py  connect.py  dialogs.py  server_manager.py  session_store.py  sessions.py  vault.py  vaultctl.py
nhd/nethuds/: bootstrap.py  devices.example.yaml  launcher.py  legacy_ssh_versions.json  paths.py
nhd/nethuds/arista/: collector.py  config.example.yaml  parsers.py  server.py
nhd/nethuds/arista/static/: index.html
nhd/nethuds/cisco_ios/: collector.py  config.example.yaml  parsers.py  server.py
nhd/nethuds/cisco_ios/static/: index.html
nhd/nethuds/juniper/: README.md  collector.py  config.example.yaml  server.py
nhd/nethuds/juniper/static/: index.html
nhd/nethuds/linux/: README.md  collector.py  config.example.yaml  server.py
nhd/nethuds/linux/static/: index.html
nhd/nethuds/static/: launcher.html
